fix: paths to public, horizontal scroll removal

--- a/src/components/MoodGraph/MoodGraph.module.css
+++ b/src/components/MoodGraph/MoodGraph.module.css
@@ -6,9 +6,6 @@
   border-radius: 20px;
   margin-top: 35px;
   background-color: white;
-
-  /* background-image: url("./MoodGraph-TO_BE_DELETED.png");
-  background-size: cover; */
 }
 
 .top-container {
