--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-synthesis: none;
+  overflow-x: hidden;
   text-rendering: optimizelegibility;
   text-size-adjust: 100%;
 
